# Dali

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  install.bat
Config/Dali/: CMakeLists.txt
Config/LayoutViewer/: CMakeLists.txt  layout2d - Copy.json  layout2d.json  layout2d1.json  layout2d10.json  layout2d11.json  layout2d2 - Copy.json  layout2d2.json  layout2d3.json  layout2d3_test.json  layout2d4.json  layout_add.json  layout_bottom_right.json  layout_circle.json  layout_horizontal_1.json  layout_horizontal_2.json  layout_horizontal_3.json  layout_horizontal_4.json  layout_horizontal_5.json  layout_irregular.json  layout_vertical_3.json
Dali/: CMakeLists.txt  layout.json  layout1.json  layout2.json  layout3.json
Example/LayoutFiles/: kamal.json  layout-demo.json  layout-demo2.json  layout.json  layout1.json  layout2.json  layout2d - Copy.json  layout2d.json  layout2d1 - Copy.json  layout2d1.json  layout2d12.json  layout2d2 - Copy.json  layout2d2.json  layout2d3.json  layout2d4.json  layout3-4(2).json  layout3-4(3).json  layout3-4.json  layout3.json  layout4.json  layout_add.json  layout_bottom_right.json  layout_circle(2).json  layout_circle.json  layout_cross.json  layout_horizontal_1.json  layout_horizontal_2.json  layout_horizontal_3.json  layout_horizontal_4.json  layout_horizontal_5.json  layout_horizontal_6.json  layout_vertical_3.json  layout_vertical_4.json
Example/LayoutFiles/OneDLayoutFiles/: layout1.json  layout2.json
Include/: Dali.h  Layout.h  LayoutBase.h  LayoutBox.h  LayoutWidget.h  MainWindow.h
Include/Dali/: Constraint.hpp  ConstraintExpression.hpp  ConstraintGraph.hpp  Constraints.hpp  Dali.hpp  Layout.hpp  LayoutBox.hpp  LayoutItem.hpp  LayoutValidator.hpp  LayoutWidget.hpp  Parser.hpp  Solver.hpp
Include/LayoutViewer/: JsonEditor.hpp  LayoutWidget.hpp  LineNumberWidget.hpp  MainWindow.hpp
Resources/: CMakeLists.txt  Resources.qrc
Source/: Layout.cpp  LayoutBase.cpp  LayoutBox.cpp  LayoutItem.cpp  LayoutWidget.cpp  MainWindow.cpp  main.cpp
Source/Dali/: Constraint.cpp  ConstraintExpression.cpp  ConstraintGraph.cpp  Constraints.cpp  Layout.cpp  LayoutBox.cpp  LayoutItem.cpp  LayoutValidator.cpp  LayoutWidget.cpp  Parser.cpp  Solver.cpp
Source/LayoutViewer/: JsonEditor.cpp  LayoutWidget.cpp  LineNumberWidget.cpp  MainWindow.cpp  main.cpp
